--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
   </div>
   <nav class="navbar">
     <div class="max-width">
-      <div class="logo"><a href="https://rajuan.rf.gd/">Saiy<span>ed</span></a></div>
+      <div class="logo"><a href="#">Saiy<span>ed</span></a></div>
       <ul class="menu">
         <li><a href="#home" class="menu-btn">Home</a></li>
         <li><a href="#about" class="menu-btn">About</a></li>
         <li><a href="#services" class="menu-btn">Services</a></li>
         <li><a href="#skills" class="menu-btn">Skills</a></li>
         <li><a href="#contact" class="menu-btn">Contact</a></li>
+         <li><a href="https://www.facebook.com/kaisir.ahamed.saiyed?mibextid=2JQ9oc" class="menu-btn">Facebook</a></li>
+       <li><a href="https://youtube.com/@kaisir.ahamed.saiyed?si=kEQCYvZUtaTltNMW" class="menu-btn">YouTube</a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -67,7 +69,7 @@
     <div class="max-width">
       <div class="home-content">
         <div class="text-1">Hello, My name is</div>
-        <div class="text-2">Saiyed</div>
+        <div class="text-2"> Kaisir Ahamed Saiyed</div>
         <div class="text-3">And I'm a <span class="typing"></span></div>
         <a href="https://www.facebook.com/kaisir.ahamed.saiyed?mibextid=2JQ9oc">Contact me</a>
       </div>
